force-app/main/default/objects/SVMXA360__COMM_StepUsageLog__c/SVMXA360__COMM_StepUsageLog__c.object-meta.xml
<CustomObject>
    <description>Object stores the usage log of all wizard steps on a particular source record</description>
    <label>Step Usage Log</label>
    <nameField>
        <displayFormat>WSL-{00000000}</displayFormat>
        <label>Step Usage Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Step Usage Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>