force-app/main/default/objects/SVMXA360__COMM_StepUsageLog__c/fields/SVMXA360__ProcessWizardStep__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ProcessWizardStep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent step id</description>
    <inlineHelpText>Parent step id</inlineHelpText>
    <label>Process Wizard Step</label>
    <referenceTo>SVMXA360__CONF_ProcessWizardStep__c</referenceTo>
    <relationshipLabel>Step Usage Log</relationshipLabel>
    <relationshipName>StepUsageLog</relationshipName>
    <type>Lookup</type>
</CustomField>