force-app/main/default/objects/SVMXA360__COMM_StepUsageLog__c/fields/SVMXA360__SourceRecordId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__SourceRecordId__c</fullName>
    <description>Source record Id for which the usage is captured.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Source record Id for which the usage is captured.</inlineHelpText>
    <label>Source Record Id</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>