force-app/main/default/objects/SVMXA360__COMM_StepUsageLog__c/fields/SVMXA360__Status__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Status__c</fullName>
    <defaultValue>&quot;Complete&quot;</defaultValue>
    <description>Tracks the status of the record on completion</description>
    <inlineHelpText>Tracks the status of the record on completion</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>