force-app/main/default/objects/SVMXA360__COMM_StepUsageLog__c/fields/SVMXA360__UniqueId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__UniqueId__c</fullName>
    <description>Unique Id stores the combination of source record id and step id. Uniquely identifies the record combination for the steps completed for a record.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Unique Id stores the combination of source record id and step id. Uniquely identifies the record combination for the steps completed for a record.</inlineHelpText>
    <label>Unique Id</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>